--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,10 @@
   "author": "Mihaita Ivli",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^1.17.3"
+    "chai": "^4.1.2",
+    "mocha": "^5.1.0",
+    "nodemon": "^1.17.3",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
