--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.1.0",
+    "mongoose": "^5.0.15",
     "nodemon": "^1.17.3",
     "supertest": "^3.0.0"
   },
