--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha spec/api.spec.js",
+    "seed": "node lib/seed.js",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
