Insert random id as to not expose the inner db id key

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "mocha": "^5.1.0",
     "mongoose": "^5.0.15",
     "nodemon": "^1.17.3",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "uuid": "^3.2.1"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
